<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/fad_view_margin"
            android:layout_marginTop="@dimen/fad_view_margin"
            android:layout_marginEnd="@dimen/fad_view_margin"
            android:text="@string/sign_review_sign_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fad_view_margin"
            android:layout_marginTop="@dimen/fad_view_margin"
            android:layout_marginEnd="@dimen/fad_view_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fad_view_margin"
                android:gravity="start|center">

                <ImageView
                    android:id="@+id/img_review_sign"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="#fff"
                    android:src="@drawable/fad_ic_instructions_document" />

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fad_view_margin"
                    android:text="Firma" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fad_view_margin"
                android:gravity="start|center">

                <ImageView
                    android:id="@+id/img_review_video_sign"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="#fff"
                    android:src="@drawable/fad_ic_instructions_document" />

                <TextView
                    style="@style/SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fad_view_margin"
                    android:text="@string/sign_review_video_text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fad_view_margin"
            android:layout_marginTop="@dimen/fad_view_margin"
            android:layout_marginEnd="@dimen/fad_view_margin"
            android:orientation="vertical"
            android:padding="@dimen/fad_view_margin">

            <TextView
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_review_info_title" />

            <TextView
                style="@style/SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_review_info_text"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_review_confirm"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/sign_review_confirm_text" />

        <Button
            android:id="@+id/btn_review_retry"
            style="@style/BaseButtonGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/sign_review_retry_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lls_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fad_view_margin"
            android:gravity="center"
            android:text="@string/sign_sending_info"
            android:textColor="#fff" />

        <ProgressBar
            android:id="@+id/fad_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:progressTint="@color/progressbar_tint" />

    </LinearLayout>

</RelativeLayout>